--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "rollup": "^2.64.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Eckhardt-D/paytoday"
+  },
+  "homepage": "https://github.com/Eckhardt-D/paytoday"
 }
