--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "paytoday",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A modern Javascript SDK for Namibia's Pay with PayToday",
   "main": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c"
+    "build": "npx tsc --emitDeclarationOnly && rollup -c"
   },
   "keywords": [
     "online payments",
