--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2015",                          
+    "target": "es2015",
     "module": "esnext",
-    "moduleResolution": "node",                     
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationDir": "./dist",
+    "declarationMap": true,
     "noEmitOnError": true,
-    "lib": ["es2017", "DOM"],                            
-    "strict": true,  
-    "esModuleInterop": false,                 
+    "lib": ["es2017", "DOM"],
+    "strict": true,
+    "esModuleInterop": false,
     "outDir": "dist/.tsc-build",
-    "rootDir": "./"
-  }
-  ,
+    "rootDir": "./src"
+  },
   "include": ["./src/**/*.ts"]
 }
