--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "paytoday",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A modern Javascript SDK for Namibia's Pay with PayToday",
-  "main": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "npx tsc --emitDeclarationOnly && rollup -c"
   },
