--- a/examples/app/package.json
+++ b/examples/app/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "paytoday": "^0.2.4",
+    "paytoday": "latest",
     "vue": "^2.6.11"
   },
   "devDependencies": {
