--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "paytoday",
-  "version": "0.4.4",
+  "version": "0.5.4",
   "description": "A modern Javascript SDK for Namibia's Pay with PayToday",
-  "main": "./dist/index.esm.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "npx tsc --emitDeclarationOnly && rollup -c"
